# hive-mcp-gateway

./: CLAUDE.md  Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  tools.rs
