[package]
name = "hive-mcp-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MCP gateway for HiveFabric: exposes Honeycomb capabilities to Claude/GPT/Gemini"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hive-infra = { path = "../hive-sdk/packages/hive-infra" }
hive-sdk = { path = "../hive-sdk" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[features]
default = []

[[bin]]
name = "mcp-stdio"
path = "src/bin/mcp_stdio.rs"
required-features = []

